Ejecución funcional de comando en linux